--- a/volunteer-together-app/package.json
+++ b/volunteer-together-app/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "firebase": "^10.4.0",
-    "sirv-cli": "^2.0.0"
+    "sirv-cli": "^2.0.0",
+    "svelte-routing": "^2.3.0"
   }
 }
