--- a/volunteer-together-app/package.json
+++ b/volunteer-together-app/package.json
@@ -10,7 +10,7 @@
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^24.0.0",
-    "@rollup/plugin-node-resolve": "^15.0.0",
+    "@rollup/plugin-node-resolve": "^15.2.1",
     "@rollup/plugin-terser": "^0.4.0",
     "rollup": "^3.15.0",
     "rollup-plugin-css-only": "^4.3.0",
@@ -19,6 +19,8 @@
     "svelte": "^3.55.0"
   },
   "dependencies": {
+    "@googlemaps/google-maps-services-js": "^3.3.38",
+    "@rollup/plugin-json": "^6.0.0",
     "firebase": "^10.4.0",
     "sirv-cli": "^2.0.0",
     "svelte-routing": "^2.3.0"
